# loomiai-perduction-market

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: package-check.yml  publish-pypi.yml
autoresearch/: README.md  eval_markets.json  pm_prepare.py  pm_train.py
docs/: autoresearch-agent-dev-plan.md  autoresearch-agent-development-plan.md  pypi-release.md  runtime-architecture.md
examples/prediction-market/: README.md  research.yaml
examples/prediction-market/datasets/: README.md  eval_markets.json
examples/prediction-market/workspace/: strategy.py
prediction_market_data/: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.orchestrator  Dockerfile.worker  docker-compose.yml  download_data.py  prepare.py  run_data_pipeline.py
prediction_market_data/app/: __init__.py  adapter_registry.py  adapters.py  auth.py  common.py  model_probe.py  run_summary.py  run_task.py  runs.py  schemas.py  secrets.py  task_manager.py  worker_loop.py
prediction_market_data/app/api/: __init__.py  dashboard_routes.py
prediction_market_data/app/experiment/: __init__.py  event_sink.py  gates.py
prediction_market_data/app/projections/: __init__.py  run_projection.py
prediction_market_data/app/repositories/: __init__.py  run_repository.py
prediction_market_data/app/services/: __init__.py  preflight_service.py  run_lifecycle_service.py  run_query_service.py  task_submission_service.py
prediction_market_data/dashboard/: app.py
prediction_market_data/dashboard/static/: dashboard.css
prediction_market_data/dashboard/static/js/: api.js  app-shell.js  charts.js  utils.js  (+4 more)
prediction_market_data/dashboard/templates/: index.html
prediction_market_data/demo/: codex_strategy_worker.py  codex_subagent_worker.py  orchestrator_demo.py  strategy_experiment.py
prediction_market_data/demo_runtime/strategy_workspace/: pm_config.py
prediction_market_data/tests/: __init__.py  test_gates.py  test_run_projection.py  test_run_spec.py
skills/autoresearch-agent/: SKILL.md
src/autoresearch_agent/: __init__.py  __main__.py
src/autoresearch_agent/cli/: __init__.py  main.py  runtime.py
src/autoresearch_agent/core/: __init__.py  paths.py  strategy.py
src/autoresearch_agent/mcp/: __init__.py  job_store.py  server.py
src/autoresearch_agent/packs/: __init__.py
src/autoresearch_agent/project/: __init__.py  scaffold.py
tests/: test_cli_smoke.py  test_pack_loader.py  test_project_scaffold.py  test_research_config.py  test_runtime_flow.py
tools/: mcp_real_smoke.py
(+31 files in other folders)
