[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-agent"
version = "0.1.0"
description = "Installable local research agent with pack-based iteration workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" },
]
dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=2.14.0"]
yaml = ["PyYAML>=6.0.2"]
dev = ["pytest>=8.3.0"]

[project.scripts]
ar = "autoresearch_agent.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
